--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1>Con buñuelos 10 mas de actitud</h1>
+
+    <canvas id="canvas" height="150" weight="300" background-color="black"></canvas>
 </body>
 </html>
