Se cambio titulo

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Mi primer juego</title>
 </head>
 <body>
-    <h1>Con buñuelos 10 mas de actitud</h1>
+    <h1>Desarrollando con buñuelos</h1>
 
     <canvas id="canvas" height="150" weight="300" background-color="black"></canvas>
 </body>
